--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: ghrc.io/OWNER/REPO:latest
+        image: ghcr.io/fredydlemu/hpa-demo:latest
         ports:
         - containerPort: 8080
         env:
