--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -11,5 +11,8 @@ configMapGenerator:
 - name: web-config
   literals:
   - ENV=prod
-commonLabels:
-  env: prod
+labels:
+- pairs:
+    env: prod
+  includeSelectors: true
+  includeTemplates: true
